clang++ build fixes for JavaScriptCore and WebCore https://bugs.webkit.org/show_bug.cgi?id=42478

Reviewed by Sam Weinig.

JavaScriptCore:

* runtime/RegExpKey.h:
(JSC::operator==):
Move the RegExpKey equals operator into the JSC namespace so it can be found by ADL.

WebCore:

* platform/network/Credential.cpp:
(WebCore::Credential::type):
* platform/network/Credential.h:
Remove const qualifier on Credential::type since it doesn't have an effect on the type.

Canonical link: https://commits.webkit.org/54418@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63578 268f45cc-cd09-0410-ab3c-d52691b4dbfc